# evalkit

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml  test.yml
data/: sample.jsonl
evalkit/: cli.py  config.py  diff.py  runner.py  utils.py
evalkit/providers/: __init__.py  anthropic_provider.py  base.py  openai_provider.py
evalkit/report/: html.py  json_writer.py
evalkit/report/templates/: report.html.j2
evalkit/scorers/: __init__.py  base.py  embed.py  exact.py  llm_judge.py
evals/: example_code.yaml  example_factual.yaml  example_summarise.yaml
tests/: test_diff.py  test_runner.py  test_scorers.py
